# gabbology

./: LICENSE  README.md  gabbology.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: packaging.yml
app/: .eslintrc.json  .gitignore  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/src/: App copy.tsx  App.tsx  main.tsx
app/src/components/: AboutMe.tsx
app/src/pages/: index.tsx
docker/: Dockerfile
k8s/: README.md
k8s/argocd/: application.yaml
k8s/cert-manager/: application.yaml
k8s/gabbology/: deployment.yaml  ingress.yaml  production.certificate.yaml  production.clusterissuer.yaml  service.yaml  staging.certificate.yaml  staging.clusterissuer.yaml
k8s/traefik/: helmchartconfig.yaml
scripts/: build.sh  package.sh  watch.sh
server/: Cargo.toml  askama.toml  build.rs
server/markdown/about/: description.md  technologies.md
server/src/: cli.rs  lib.rs  main.rs  routing.rs  templates.rs
website/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/src/: main.ts  style.css
website/templates/: about.html  index.html  test.html
