[package]
name = "gabbology-server"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
axum = "0.6"
clap =  {version = "4.2", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
