[package]
name = "gabbology-server"
version = "0.0.0"
edition = "2021"

[profile.release]
strip = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.95"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.8.1"
clap = { version = "4.5", features = ["derive", "env"] }
pulldown-cmark = { version = "0.12.2", features = ["simd"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
semver = "1.0.24"
anyhow = "1.0.95"
